--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,15 @@ streamlit
 pymupdf
 langchain
 langchain-community
-faiss-cpu
 nltk
 openai
-groq
+langchain_groq
 tiktoken
 python-dotenv
 PyYAML
 requests
+faiss-cpu
+fastembed
+-U langchain-community
+PyMuPDF
+fitz
